stop navbar jumping around

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,5 +1,6 @@
 .container {
   padding: 0 2rem;
+  padding-left: calc(100vw - 100%);
 }
 
 .main {
